[package]
name = "thre"
version = "0.1.0"
edition = "2021"
description = "A comfortable, configurable terminal file reader"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/logancammish/thre"
keywords = ["terminal", "editor", "cli", "syntax-highlighting"]
categories = ["command-line-utilities", "text-editors"]

[dependencies]
crossterm = "0.29"

[profile.release]
lto = true
codegen-units = 1
strip = true
