[package]
name = "thre"
version = "0.2.1"
edition = "2021"
description = "A comfortable, configurable terminal file reader"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/logancammish/thre"
keywords = ["terminal", "editor", "cli", "syntax-highlighting"]
categories = ["command-line-utilities", "text-editors"]

[dependencies]
crossterm = "0.29"
unicode-width = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
